# fichariumPy

./: README.md  pyproject.toml
.github/workflows/: docs.yml
_site/: ficharium.html  fichariumPy.html  index.html  search.js
docs/: custom.css
src/ficharium/: __init__.py  _utils.py  auth.py  especies.py  expandir.py  fichas.py  modelos.py  projetos.py
src/fichariumPy/: __init__.py  especies.py  fichas.py  modelos.py  projetos.py
