[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fichariumPy"
version = "1.1.0"
description = "Cliente Python para a API Ficharium Cloud"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pandas>=2.0",
]

[project.optional-dependencies]
docs = ["pdoc"]

[project.urls]
Homepage = "https://ficharium.cloud"
Documentation = "https://biosensu.github.io/fichariumPy"
